--- a/style.css
+++ b/style.css
@@ -22,12 +22,12 @@ h1 {
   text-align: center;
 }
 
-#task-form {
+.task-form {
   display: flex;
   align-items: stretch;
 }
 
-#task-input {
+.task-input {
   flex: 1;
   padding: 0.5rem;
   border: 1px solid #ccc;
@@ -36,7 +36,7 @@ h1 {
   outline: none;
 }
 
-#task-form button {
+.task-form button {
   padding: 0 1rem;
   border: 1px solid #ccc;
   border-radius: 0 8px 8px 0;
@@ -45,12 +45,12 @@ h1 {
   cursor: pointer;
 }
 
-#task-form button:hover {
+.task-form button:hover {
   background: #0056b3;
 }
 
 /* Lista de tareas */
-#task-list {
+.task-list {
   list-style: none;
   padding: 0;
 }
@@ -90,3 +90,13 @@ h1 {
   text-decoration: line-through;
   color: gray;
 }
+
+.task-status {
+  color: #4CAF50;
+  font-weight: bold;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin-left: 8px;
+  margin-right: 12px;
+  font-size: 0.95em;
+}
+
